--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.559.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
