--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
