--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
