--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.559.0",
     "mongoose": "^9.0.1",
     "next": "^16.0.10",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
     "react": "19.2.1",
