--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
