--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.23.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -30,6 +35,7 @@
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.559.0",
+    "material-react-table": "^3.2.1",
     "mongoose": "^9.0.1",
     "next": "^16.0.10",
     "next-cloudinary": "^6.17.5",
