--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dayjs": "^1.11.19",
     "entities": "^7.0.0",
     "export-to-csv": "^1.4.0",
+    "fuse.js": "^7.1.0",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.559.0",
